--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ Utilizando la plantilla de la catedra en formato latex
 
 <div>
 <p style = 'text-align:center;'>
-<img src="https://i.postimg.cc/C5StRTf9/Captura-de-pantalla-50.png" alt="CV" width="300px">
+<img src="https://i.postimg.cc/gcyjQVc0/CV.png" alt="CV" width="300px">
 </p>
 </div>
 
